# artifastring-rs

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  rustfmt.toml
data/: violin-g-major.actions
src/: lib.rs  main.rs
src/actions2wav/: mod.rs
src/cli/: actions2wav.rs  mod.rs
